2001-07-21  Darin Adler  <darin@bentspoon.com>

	* rsvg-ft.c: (rsvg_ft_measure_or_render_string):
	Fix bug where we would render past the end of the passed-in
	string if there are any multi-byte sequences in the string.

	* autogen.sh: Remove xml-i18n-toolize.

	* configure.in: Remove some commented-out stuff that could
	confuse scripts that grep through this file.

	* .cvsignore: Remove some files that should not be generated.

==== librsvg 1.0.1 ====

2001-07-05  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump version to 1.0.1
	* NEWS: Tell about new features for 1.0.1

2001-06-01  Darin Adler  <darin@bentspoon.com>

	* Makefile.am:
	* rsvg.h:
	* rsvg.c: (rsvg_text_handler_characters), (rsvg_set_fonts_dir):
	Add a call to set the fonts dir so it can work without eel, and
	a future version of eel will work even if it's in a different
	prefix from librsvg.
	
	* configure.in: Bump version to 1.0.0.1
	* NEWS: Mention the possibility of a 1.0.1 release.

2001-05-14  Darin Adler  <darin@eazel.com>

	* Makefile.am:
	* rsvg.c: (rsvg_text_handler_characters):
	Change awful nasty Nautilus dependency into a slightly-less-awful
	nasty Eel dependency. Also fix problem where not finding a font
	would lead to a core dump instead of missing text.

==== librsvg 1.0.0 ====

2001-05-04  Robin * Slomkowski  <rslomkow@rslomkow.org>

	* configure.in: upped version to 1.0.0

2001-05-02  Ramiro Estrugo  <ramiro@eazel.com>

	* configure.in:
	Add freetype dependency to LIBRSVG_LIBS and LIBRSVG_INCLUDEDIR.
	
2001-05-01  Ramiro Estrugo  <ramiro@eazel.com>

	* .cvsignore:
	Ignore generated xml-i18n-tools droppings.
	
2001-05-01  Ramiro Estrugo  <ramiro@eazel.com>

	* autogen.sh:
	* configure.in:
	Simplify the freetype2 detection insanity by using autoconf macro
	technology.  The new test should work with both FreeType2 RPMS as
	well as freetype built from source in any prefix.
	
2001-05-01  Darin Adler  <darin@eazel.com>

	* configure.in: