@@ -1,3 +1,15 @@
+2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>
+
+	* Makefile.am:
+	* configure.in:
+	* librsvg-1.0.pc.in:
+	Change includedir to librsvg-1/librsvg that it can cohabitate with
+	librsvg from the GNOME2 platform.
+
+	* librsvg.spec.in:
+	Update for library and includedir name changes, plus some extra
+	cleanup.
+
 2001-07-21  Darin Adler  <darin@bentspoon.com>
 
 	* rsvg-ft.c: (rsvg_ft_measure_or_render_string):
